--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Placeholder</title>
+    <title>Papa Louie 1: When Pizzas Attack!</title>
     <script src="ruffle/ruffle.js"></script>
 </head>
 <body>
-    <embed src="placeholder.swf" width="1200" height="900">
+    <embed src="papalouie_v2.swf" width="1200" height="900">
 </body>
 </html>
